--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>PRIMERA PAGINA </title>
+	<title>-1era -Pagina</title>
 </head>
 <body>
 	<h1> HELLO</h1>
